@startuml

title __SPYBOT's Class Diagram__\n

  namespace  {
    namespace om.example.spybot {
      class com.example.spybot.LevelSelection {
          + onClick()
          # onCreate()
          ~ createButton()
      }
    }
  }
  

  namespace  {
    namespace om.example.spybot {
      class com.example.spybot.MainActivity {
          ~ height : int
          ~ width : int
          # onCreate()
          ~ OnClick()
          ~ createButton()
      }
    }
  }
  

  namespace  {
    namespace om.example.spybot {
      class com.example.spybot.MainMenu {
          + onClick()
          # onCreate()
      }
    }
  }
  

  com.example.spybot.LevelSelection .up.|> android.view.View.OnClickListener
  com.example.spybot.LevelSelection -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.spybot.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.spybot.MainActivity o-- com.level.Board : board
  com.example.spybot.MainMenu .up.|> android.view.View.OnClickListener
  com.example.spybot.MainMenu -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
